Finally done--hopefully ^_^